testing html for heading

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -4,12 +4,37 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Final Project</title>
-  <link rel="icon" href="/favicon.ico">
-  <link rel="stylesheet" href="/reset.css">
-  <link rel="stylesheet" href="/layout.css">
-  <link rel="stylesheet" href="/styles.css">
+  <link rel="icon" href="/client/images/quick-track-logo.png">
+  <link rel="stylesheet" href="reset.css">
+  <link rel="stylesheet" href="layout.css">
+  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" crossorigin="anonymous"
+    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css"
+    integrity="sha512-1PKOgIY59xJ8Co8+NE6FZ+LOAZKjy+KY8iq0G4B3CyeY6wYHN3yt9PW0XpSriVlkMXe40PTKnXrLnZ9+fkDaog==">
 </head>
 <body>
+    <div class="whole-pg-cont">
+      <div class="header-cont row">
+        <div class="col-3">
+          <i class="fas fa-bars header-bars"></i>
+          <div class="pg-id-cont row">
+            <div class="pg-id-img-cont col-3">
+              <img class="pg-id-img" src="/client/images/past-exp-logo.png" alt="past-expense-logo">
+            </div>
+            <p class="pg-id-txt">Past Expenses</p>
+          </div>
+        </div>
+
+        <div class="col-3 row just-cent">
+          <img class="header-logo" src="/client/images/quick-track-logo.png" alt="quick-track-logo">
+        </div>
+
+        <div class="col-3">
+
+        </div>
+
+      </div>
+    </div>
   <div id="root"></div>
   <script src="/main.js"></script>
 </body>
