--- a/server/public/index.html
+++ b/server/public/index.html
@@ -4,34 +4,34 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Final Project</title>
-  <link rel="icon" href="/client/images/quick-track-logo.png">
+  <link rel="icon" href="images/quick-track-logo.png">
   <link rel="stylesheet" href="reset.css">
   <link rel="stylesheet" href="layout.css">
   <link rel="stylesheet" href="styles.css">
   <link rel="stylesheet" crossorigin="anonymous"
     href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css"
     integrity="sha512-1PKOgIY59xJ8Co8+NE6FZ+LOAZKjy+KY8iq0G4B3CyeY6wYHN3yt9PW0XpSriVlkMXe40PTKnXrLnZ9+fkDaog==">
+  <link rel="stylesheet" href="https://use.typekit.net/ysy5bde.css">
 </head>
 <body>
     <div class="whole-pg-cont">
-      <div class="header-cont row">
-        <div class="col-3">
+      <div class="header-cont col">
           <i class="fas fa-bars header-bars"></i>
-          <div class="pg-id-cont row">
-            <div class="pg-id-img-cont col-3">
-              <img class="pg-id-img" src="/client/images/past-exp-logo.png" alt="past-expense-logo">
-            </div>
+
+        <div class="row just-cent">
+          <img class="header-logo" src="images/quick-track-logo.png" alt="quick-track-logo">
+        </div>
+
+        <div class="pg-id-cont row">
+          <section class="pg-id-img-cont">
+            <img class="pg-id-img" src="images/past-exp-logo.png" alt="past-expense-logo">
             <p class="pg-id-txt">Past Expenses</p>
+          </section>
+          <div class="create-icon">
+            <img src="images/create-icon.png" alt="create-new-icon">
           </div>
-        </div>
+          </div>
 
-        <div class="col-3 row just-cent">
-          <img class="header-logo" src="/client/images/quick-track-logo.png" alt="quick-track-logo">
-        </div>
-
-        <div class="col-3">
-
-        </div>
 
       </div>
     </div>
