header html done, starting to make component in React.js

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -15,26 +15,28 @@
 </head>
 <body>
     <div class="whole-pg-cont">
+      <!-- header html
       <div class="header-cont col">
           <i class="fas fa-bars header-bars"></i>
-
         <div class="row just-cent">
           <img class="header-logo" src="images/quick-track-logo.png" alt="quick-track-logo">
         </div>
-
-        <div class="pg-id-cont row">
-          <section class="pg-id-img-cont">
-            <img class="pg-id-img" src="images/past-exp-logo.png" alt="past-expense-logo">
-            <p class="pg-id-txt">Past Expenses</p>
-          </section>
-          <div class="create-icon">
-            <img src="images/create-icon.png" alt="create-new-icon">
+        <div class="row">
+          <div class="pg-id-cont row">
+            <section class="pg-id-img-cont">
+              <img class="pg-id-img" src="images/past-exp-logo.png" alt="past-expense-logo">
+              <p class="pg-id-txt">Past Expenses</p>
+            </section>
+          </div>
+          <div class="create-cont">
+           <i class="fas fa-plus-circle create-icon"></i>
+          </div>
+        </div>
           </div>
           </div>
-
-
       </div>
     </div>
+    -->
   <div id="root"></div>
   <script src="/main.js"></script>
 </body>
