footer html setup

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -14,8 +14,8 @@
   <link rel="stylesheet" href="https://use.typekit.net/ysy5bde.css">
 </head>
 <body>
-    <div class="whole-pg-cont">
-      <!-- header html
+
+  <div id="root" class="whole-pg-cont">
       <div class="header-cont col">
           <i class="fas fa-bars header-bars"></i>
         <div class="row just-cent">
@@ -33,11 +33,19 @@
           </div>
         </div>
           </div>
-          </div>
-      </div>
-    </div>
-    -->
-  <div id="root"></div>
+<!-- html footer -->
+<footer class="footer-cont row">
+  <a class="footer-icon-cont" href="">
+    <img src="images/past-exp-logo.png" alt="past-exp-logo" class="footer-icon">
+  </a>
+  <a class="footer-icon-cont" href="">
+    <img src="images/summary-icon.png" alt="summary-icon" class="footer-icon">
+  </a>
+  <a class="footer-icon-cont indicator-circle" href="">
+    <img src="images/acc-settings-logo.png" alt="account-settings-logo" class="footer-icon">
+  </a>
+</footer>
+  </div>
   <script src="/main.js"></script>
 </body>
 </html>
