--- a/server/public/index.html
+++ b/server/public/index.html
@@ -16,11 +16,11 @@
 <body>
 
   <div id="root" class="whole-pg-cont">
-      <div class="header-cont col">
+      <!-- <div class="header-cont col">
           <i class="fas fa-bars header-bars"></i>
-        <div class="row just-cent">
-          <img class="header-logo" src="images/quick-track-logo.png" alt="quick-track-logo">
-        </div>
+          <a class="row header-logo-cont" href="#">
+           <img class="header-logo" src="images/quick-track-logo.png" alt="quick-track-logo">
+          </a>
         <div class="row">
           <div class="pg-id-cont row">
             <section class="pg-id-img-cont">
@@ -32,19 +32,19 @@
            <i class="fas fa-plus-circle create-icon"></i>
           </div>
         </div>
-          </div>
+          </div> -->
 <!-- html footer -->
-<footer class="footer-cont row">
-  <a class="footer-icon-cont" href="">
-    <img src="images/past-exp-logo.png" alt="past-exp-logo" class="footer-icon">
+<!-- <footer class="footer-cont row">
+  <a class="footer-icon-cont" href="#past-expenses">
+    <img src="images/past-exp-logo.png" alt="past-exp-icon" class="footer-icon">
   </a>
-  <a class="footer-icon-cont" href="">
+  <a class="footer-icon-cont" href="#summary">
     <img src="images/summary-icon.png" alt="summary-icon" class="footer-icon">
   </a>
-  <a class="footer-icon-cont indicator-circle" href="">
-    <img src="images/acc-settings-logo.png" alt="account-settings-logo" class="footer-icon">
+  <a class="footer-icon-cont" href="#acc-settings">
+    <img src="images/acc-settings-logo.png" alt="account-settings-icon" class="footer-icon">
   </a>
-</footer>
+</footer> -->
   </div>
   <script src="/main.js"></script>
 </body>
