added Menu component

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -12,11 +12,17 @@
     href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css"
     integrity="sha512-1PKOgIY59xJ8Co8+NE6FZ+LOAZKjy+KY8iq0G4B3CyeY6wYHN3yt9PW0XpSriVlkMXe40PTKnXrLnZ9+fkDaog==">
   <link rel="stylesheet" href="https://use.typekit.net/ysy5bde.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200;300;400;500;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
 
   <div id="root" class="whole-pg-cont">
-      <!-- <div class="header-cont col">
+<!--
+      <div class="header-cont col">
           <i class="fas fa-bars header-bars"></i>
           <a class="row header-logo-cont" href="#">
            <img class="header-logo" src="images/quick-track-logo.png" alt="quick-track-logo">
@@ -33,13 +39,36 @@
           </div>
         </div>
           </div> -->
+          <!-- menu -->
+          <!-- <div class="overlay">
+            <div class="menu-cont">
+              <div class="header-cont">
+                <a class="row header-logo-cont" href="#">
+                  <img class="header-logo" src="images/quick-track-logo.png" alt="quick-track-logo">
+                </a>
+                <h1 class="menu-txt">
+                  Menu
+                </h1>
+              </div>
+              <div class="menu-icon-cont">
+
+              </div>
+              <div class="menu-footer-cont">
+                <p class="menu-txt">
+                  Designed by Quintin Russell <br>
+                  QuickTrack Finance 2021
+                </p>
+              </div>
+            </div>
+          </div> -->
+
 <!-- html footer -->
-<!-- <footer class="footer-cont row">
+  <!-- <footer class="footer-cont row">
   <a class="footer-icon-cont" href="#past-expenses">
     <img src="images/past-exp-logo.png" alt="past-exp-icon" class="footer-icon">
   </a>
   <a class="footer-icon-cont" href="#summary">
-    <img src="images/summary-icon.png" alt="summary-icon" class="footer-icon">
+    <img src="images/summary-logo.png" alt="summary-icon" class="footer-icon">
   </a>
   <a class="footer-icon-cont" href="#acc-settings">
     <img src="images/acc-settings-logo.png" alt="account-settings-icon" class="footer-icon">
