--- a/server/public/index.html
+++ b/server/public/index.html
@@ -21,8 +21,8 @@
 <body>
 
   <div id="root" class="whole-pg-cont">
-<!--
-      <div class="header-cont col">
+
+      <!-- <div class="header-cont col">
           <i class="fas fa-bars header-bars"></i>
           <a class="row header-logo-cont" href="#">
            <img class="header-logo" src="images/quick-track-logo.png" alt="quick-track-logo">
@@ -38,6 +38,25 @@
            <i class="fas fa-plus-circle create-icon"></i>
           </div>
         </div>
+          </div> -->
+          <!-- content -->
+          <!-- <div class="content-cont col">
+            <div class="new-exp-form col">
+                  <span class="row new-exp-toggle-span">
+                    <p class="toggle-highlight new-exp-toggle-txt">
+                      Expense
+                    </p>
+                    <p class="new-exp-toggle-txt">
+                      |
+                    </p>
+                    <p class="new-exp-toggle-txt">
+                      Deposit
+                    </p>
+                  </span>
+              <form action="">
+                <input type="text">
+              </form>
+            </div>
           </div> -->
           <!-- menu -->
           <!-- <div class="overlay">
@@ -63,7 +82,7 @@
           </div> -->
 
 <!-- html footer -->
-  <!-- <footer class="footer-cont row">
+  <footer class="footer-cont row">
   <a class="footer-icon-cont" href="#past-expenses">
     <img src="images/past-exp-logo.png" alt="past-exp-icon" class="footer-icon">
   </a>
@@ -73,7 +92,7 @@
   <a class="footer-icon-cont" href="#acc-settings">
     <img src="images/acc-settings-logo.png" alt="account-settings-icon" class="footer-icon">
   </a>
-</footer> -->
+</footer>
   </div>
   <script src="/main.js"></script>
 </body>
