setting up exp-form

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -41,8 +41,7 @@
           </div>
           <!-- content -->
             <div class="exp-form-cont col">
-              <div>
-                  <span class="row exp-form">
+                  <span class="row padding-extra">
                     <p class="toggle-highlight exp-toggle-txt">
                       Expense
                     </p>
@@ -55,7 +54,7 @@
                   </span>
                   <h2 class="menu-txt">Enter a New Expense</h2>
               <form class="just-cent exp-form col" action="">
-                <label for="amount">
+                <label for="amount" class="col form-label">
                   <input class="form-input" placeholder="How much did you spend?" id="amount" name="amount" type="number">
                 </label>
                 <label for="spending-category" class="col form-label">
@@ -85,7 +84,6 @@
                   <button class="sm-button">Done</button>
                 </div>
               </form>
-              </div>
 
             </div>
 
