--- a/server/public/index.html
+++ b/server/public/index.html
@@ -22,7 +22,7 @@
 
   <div id="root" class="whole-pg-cont">
 
-      <div class="header-cont col">
+      <!-- <div class="header-cont col">
           <i class="fas fa-bars header-bars"></i>
           <a class="row header-logo-cont" href="#">
            <img class="header-logo" src="images/quick-track-logo.png" alt="quick-track-logo">
@@ -38,9 +38,9 @@
            <i class="fas fa-plus-circle create-icon"></i>
           </div>
         </div>
-          </div>
+          </div> -->
           <!-- content -->
-            <div class="exp-form-cont col">
+            <!-- <div class="exp-form-cont col">
                   <span class="row padding-extra">
                     <p class="toggle-highlight exp-toggle-txt">
                       Expense
@@ -85,7 +85,7 @@
                 </div>
               </form>
 
-            </div>
+            </div> -->
 
           <!-- menu -->
           <!-- <div class="overlay">
@@ -111,7 +111,7 @@
           </div> -->
 
 <!-- html footer -->
-  <footer class="footer-cont row">
+  <!-- <footer class="footer-cont row">
   <a class="footer-icon-cont" href="#past-expenses">
     <img src="images/past-exp-logo.png" alt="past-exp-icon" class="footer-icon">
   </a>
@@ -121,7 +121,7 @@
   <a class="footer-icon-cont" href="#acc-settings">
     <img src="images/acc-settings-logo.png" alt="account-settings-icon" class="footer-icon">
   </a>
-</footer>
+</footer> -->
   </div>
   <script src="/main.js"></script>
 </body>
