--- a/server/public/index.html
+++ b/server/public/index.html
@@ -22,106 +22,51 @@
 
   <div id="root" class="whole-pg-cont">
 
-      <!-- <div class="header-cont col">
-          <i class="fas fa-bars header-bars"></i>
-          <a class="row header-logo-cont" href="#">
-           <img class="header-logo" src="images/quick-track-logo.png" alt="quick-track-logo">
-          </a>
-        <div class="row">
-          <div class="pg-id-cont row">
-            <section class="pg-id-img-cont">
-              <img class="pg-id-img" src="images/past-exp-logo.png" alt="past-expense-logo">
-              <p class="pg-id-txt">Past Expenses</p>
-            </section>
-          </div>
-          <div class="create-cont">
-           <i class="fas fa-plus-circle create-icon"></i>
-          </div>
-        </div>
-          </div> -->
-          <!-- content -->
-            <!-- <div class="exp-form-cont col">
-                  <span class="row padding-extra">
-                    <p class="toggle-highlight exp-toggle-txt">
-                      Expense
-                    </p>
-                    <p class="exp-toggle-txt">
-                      |
-                    </p>
-                    <p class="exp-toggle-txt">
-                      Deposit
-                    </p>
-                  </span>
-                  <h2 class="menu-txt">Enter a New Expense</h2>
-              <form class="just-cent exp-form col" action="">
-                <label for="amount" class="col form-label">
-                  <input class="form-input" placeholder="How much did you spend?" id="amount" name="amount" type="number">
-                </label>
-                <label for="spending-category" class="col form-label">
-                  <h3 class="form-label-txt">Pick a Spending Category:</h3>
-                  <select id="spending-category" name="spending-category" class="form-input">
-                    <option class="form-label-txt" value="Groceries">Groceries</option>
-                    <option class="form-label-txt" value="House">House</option>
-                    <option class="form-label-txt" value="Restaurant">Restaurant</option>
-                    <option class="form-label-txt" value="Gas">Gas</option>
-                  </select>
-                </label>
-                <label for="comment" class="col form-label">
-                  <h3 class="form-label-txt">Pick a Spending Category:</h3>
-                  <input class="form-input" placeholder="What did you buy?" id="comment" name="comment" type="text">
-                </label>
-                <label for="payment-method" class="col form-label">
-                  <h3 class="form-label-txt">Pick a Payment Method:</h3>
-                  <select id="payment-method" name="payment-method" class="form-input">
-                    <option class="form-label-txt" value="Visa">Visa</option>
-                    <option class="form-label-txt" value="MasterCard">MasterCard</option>
-                    <option class="form-label-txt" value="Cash">Cash</option>
-                    <option class="form-label-txt" value="Debit">Debit</option>
-                  </select>
-                </label>
-                <div class="row button-cont">
-                  <button class="sm-button">Start Over</button>
-                <input type="submit" class="sm-button" value="Done">
-                </div>
-              </form>
+<!-- <header class="header-cont col"><i class="fas fa-bars header-bars"></i>
+  <div class="row just-cent"><a href=""><img class="header-logo" src="images/quick-track-logo.png"
+        alt="quick-track-logo"></a></div>
+  <div class="row">
+    <div class="pg-id-cont row">
+      <section class="pg-id-img-cont"><img src="images/past-exp-logo.png" alt="past-exp-icon" class="pg-id-img">
+        <p class="pg-id-txt">Past Expenses</p>
+      </section>
+    </div><a href="#past-expenses?funct=create" class="create-cont"><i class="fas fa-plus-circle create-icon"></i></a>
+  </div>
+</header>
 
-            </div> -->
+<div class="whole-pg-cont">
+  <div class="table-header menu-icon-cont">
+    <h2 class="menu-txt flex-30">Date</h2>
+    <h2 class="menu-txt flex-30">Amount</h2>
+    <div class="row flex-40">
+      <h2 class="menu-txt flex-30">Comment</h2><i class="flex-10 fas fa-ellipsis-v disp-none"></i>
+    </div>
+  </div>
+  <div class="col table-cont">
+    <div class="table-item shaded row">
+      <p class="table-txt flex-30">11-13-21</p>
+      <p class="table-txt flex-30">13.70</p>
+      <p class="table-txt flex-30">sample</p><i class="table-txt fas fa-ellipsis-v flex-10"></i>
+    </div>
+    <div class="table-item shaded row">
+      <p class="table-txt flex-30">11-13-21</p>
+      <p class="table-txt flex-30">10.00</p>
+      <p class="table-txt flex-30">ice cream</p><i class="table-txt fas fa-ellipsis-v flex-10"></i>
+    </div>
+    <div class="table-item shaded row">
+      <p class="table-txt flex-30">11-13-21</p>
+      <p class="table-txt flex-30">100.00</p>
+      <p class="table-txt flex-30">plane ticket</p><i class="table-txt fas fa-ellipsis-v flex-10"></i>
+    </div>
+  </div>
+</div>
 
-          <!-- menu -->
-          <!-- <div class="overlay">
-            <div class="menu-cont">
-              <div class="header-cont">
-                <a class="row header-logo-cont" href="#">
-                  <img class="header-logo" src="images/quick-track-logo.png" alt="quick-track-logo">
-                </a>
-                <h1 class="menu-txt">
-                  Menu
-                </h1>
-              </div>
-              <div class="menu-icon-cont">
+<footer class="footer-cont row"><a class="footer-icon-cont indicator-circle" href="#past-expenses"><img
+      src="images/past-exp-logo.png" alt="past-exp-icon" class="footer-icon"></a><a class="footer-icon-cont"
+    href="#summary"><img src="images/summary-logo.png" alt="summary-icon" class="footer-icon"></a><a
+    class="footer-icon-cont" href="#acc-setting"><img src="images/acc-settings-logo.png" alt="account-settings-icon"
+      class="footer-icon"></a></footer> -->
 
-              </div>
-              <div class="menu-footer-cont">
-                <p class="menu-txt">
-                  Designed by Quintin Russell <br>
-                  QuickTrack Finance 2021
-                </p>
-              </div>
-            </div>
-          </div> -->
-
-<!-- html footer -->
-  <!-- <footer class="footer-cont row">
-  <a class="footer-icon-cont" href="#past-expenses">
-    <img src="images/past-exp-logo.png" alt="past-exp-icon" class="footer-icon">
-  </a>
-  <a class="footer-icon-cont" href="#summary">
-    <img src="images/summary-logo.png" alt="summary-icon" class="footer-icon">
-  </a>
-  <a class="footer-icon-cont" href="#acc-settings">
-    <img src="images/acc-settings-logo.png" alt="account-settings-icon" class="footer-icon">
-  </a>
-</footer> -->
   </div>
   <script src="/main.js"></script>
 </body>
