adding edit and delete functionality to table.jsx

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -20,9 +20,32 @@
 </head>
 <body>
 
-  <div id="root" class="whole-pg-cont">
+  <div id="root">
 
-<!-- <header class="header-cont col"><i class="fas fa-bars header-bars"></i>
+    <!-- <div class="overlay menu-header-cont">
+
+        <div class="menu-header-cont modal-icon-cont table-item">
+
+                <p class="table-txt flex-30">11-13-21</p>
+                <p class="table-txt flex-30">13.70</p>
+                <p class="table-txt flex-30">sample</p>
+          <div class="col">
+            <i class="far fa-trash-alt"></i>
+            <p class="form-label-txt">
+              Delete
+            </p>
+          </div>
+          <div class="col">
+            <i class="far fa-edit"></i>
+            <p class="form-label-txt">
+              Edit
+            </p>
+          </div>
+        </div>
+    </div>
+
+
+<header class="header-cont col"><i class="fas fa-bars header-bars"></i>
   <div class="row just-cent"><a href=""><img class="header-logo" src="images/quick-track-logo.png"
         alt="quick-track-logo"></a></div>
   <div class="row">
