added meta tags

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -3,7 +3,18 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <meta property="og:title"
+  content="QuickTrack" />
+  <meta property="og:description"
+  content="A full-stack application for people that want to build positive financial habits by tracking their expenses." />
+  <meta property="og:url"
+  content="https://quick-track-app.herokuapp.com/" />
+  <meta property="og:image"
+  content="https://github.com/Quintin-Russell/quick-track/blob/master/qTrack-demo.gif" />
+
   <title>Quick Track</title>
+
   <link rel="icon" href="images/quick-track-logo.png">
   <link rel="stylesheet" href="reset.css">
   <link rel="stylesheet" href="layout.css">
