added new app image meta tag with revised url

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -11,7 +11,7 @@
   <meta property="og:url"
   content="https://quick-track-app.herokuapp.com/" />
   <meta property="og:image"
-  content="https://github.com/Quintin-Russell/quick-track/blob/master/qTrack-demo.gif" />
+  content="https://github.com/Quintin-Russell/quick-track/blob/master/quick-track-logo.png?raw=true" />
 
   <title>Quick Track</title>
 
